@@ -7,7 +7,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,6 +19,6 @@ public class ScheduleServiceImpl implements ScheduleService {
 
         return schedules.stream()
                 .map(ScheduleListDTO::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
